fixed Header alignment

--- a/src/views/header/Header.css
+++ b/src/views/header/Header.css
@@ -1,17 +1,21 @@
 .wrapper {
-  align-items: center;
   border-bottom: 1px solid #e0e0e0;
-  color: #252525;
-  display: flex;
-  justify-content: space-between;
-  padding: 0.5rem 0.9375rem 0.5rem 1.75rem;
-  position: relative;
-  z-index: 60;
 }
 
 .wrapper > div {
   align-items: center;
+  color: #252525;
   display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 0;
+  position: relative;
+  z-index: 60;
+}
+
+.wrapper > div > div {
+  align-items: center;
+  display: flex;
+  margin-left: -2rem;
 }
 
 .wrapper h1 {
@@ -100,6 +104,18 @@
 
   .isMenuExpanded {
     left: 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .wrapper > div > div {
+    margin-left: 1rem;
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  .wrapper > div > div {
+    margin-left: 0;
   }
 }
 
